== master

* Respect custom primary_key configurations in ActiveRecord models [Martin Honermeyer]
* Fix tests failing on Rails 2.3.3+
* Release gems via rake-gemcutter instead of rubyforge

== 0.4.3 / 2009-06-14

* Add support for looking up enumerators by their symbol equivalent
* Fix incompatibility with Ruby 1.9
* Fix equality / xml serialization not working for non-string enumerators
* Improve compatibility with the stable branch of Rails 2.3 [Michael Schuerig]

== 0.4.2 / 2009-05-03

* Fix bootstrapping without ids not working on update for certain database adapters

== 0.4.1 / 2009-05-01

* Improve #fast_bootstrap speed by 50% by using the connection directly

== 0.4.0 / 2009-04-30

* Allow cache to be cleared on a per-enumeration basis
* Add #fast_bootstrap for bootstrapping large numbers of records
* Don't require an id during bootstrap
* Allow bootstrapping to be easily added to non-enumerations
* Cache results for #exists? / #calculate
* Add the ability to skip the internal cache via Model#uncached
* Add Model#find_all_by_enumerator
* Don't internally rely on Model#[] being available since it may conflict with other plugins
* Enable caching by default for all enumerations
* Allow caching to be turned off on an application-wide basis
* Allow cache store to be configurable
* Automatically trigger in-memory caching of the enumeration's table when bootstrapping
* Add #bootstrap for automatically synchronizing the records in an enumeration's table
* Improve serialization performance
* No longer use tableless models
* Re-brand under the enumerate_by name

== 0.3.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.2.6 / 2008-11-29

* Fix enumeration collections not being able to convert to JSON
* Add support for multiple enumeration values in finder conditions, e.g. Car.find_all_by_color(%w(red blue))

== 0.2.5 / 2008-10-26

* Fix non-ActiveRecord associations (e.g. ActiveResource) failing
* Fix reloading of associations not working